--- a/src/Pages/YouTubePageFolder/YouTubeDirectoryPage.css
+++ b/src/Pages/YouTubePageFolder/YouTubeDirectoryPage.css
@@ -10,7 +10,7 @@
 }
 
 .youTubeDirectoryPage {
-  background: radial-gradient(#422323 0%, black 100%);
+  background: radial-gradient(#3e3819 0%, black 100%);
   box-shadow: inset 0px 0px 12px 0.2px black;
 }
 
